--- a/src/App.css
+++ b/src/App.css
@@ -4,5 +4,17 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  scroll-snap-type: y mandatory;
+  scroll-behavior: smooth;
+  align-items: center;
+}
+
+.snap-section {
+  height: 100vh;
+  scroll-snap-align: start;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
