--- a/src/pages/Expertise/Expertise.module.css
+++ b/src/pages/Expertise/Expertise.module.css
@@ -1,8 +1,20 @@
 .expertiseContainer .codeTag {
   opacity: 0.3;
-  transition: opacity 0.3s ease;
 }
 
-.expertiseContainer:hover .codeTag {
+.expertiseContainer {
+  position: relative;
+}
+
+.expertiseDescription {
+  opacity: 0;
+  height: 0;
+  transform: translateX(-20px);
+  transition: all 0.5s ease;
+}
+
+.expertiseContainer:hover .expertiseDescription {
   opacity: 1;
+  height: 100%;
+  transform: translateX(0);
 }
