--- a/src/pages/Hero/Hero.module.css
+++ b/src/pages/Hero/Hero.module.css
@@ -36,3 +36,18 @@
     width: 0;
   }
 }
+
+.heroTitle {
+  animation: fadeIn 1.5s ease;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
