--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .container {
-  width: 50%;
+  width: 55%;
   margin: auto;
   display: flex;
   flex-direction: column;
@@ -10,7 +10,7 @@
 }
 
 .snap-section {
-  height: 100vh;
+  height: 100dvh;
   scroll-snap-align: start;
   width: 100%;
   display: flex;
