--- a/src/pages/Projects/Projects.module.css
+++ b/src/pages/Projects/Projects.module.css
@@ -14,3 +14,19 @@
   top: 0;
   padding-top: 4px;
 }
+
+@media (max-width: 1120px) {
+  .projectContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 48px;
+  }
+
+  .projectTitle {
+    position: static;
+  }
+
+  .contentContainer {
+    width: 100%;
+  }
+}
