--- a/src/pages/Experiences/Experiences.module.css
+++ b/src/pages/Experiences/Experiences.module.css
@@ -19,3 +19,23 @@
 .resumeContainer:hover {
   color: var(--primary-color);
 }
+
+@media (max-width: 1120px) {
+  .experienceSection {
+    display: flex;
+    flex-direction: column;
+    gap: 48px;
+  }
+
+  .experienceContainer {
+    padding-left: 0px;
+    border: none;
+    width: 100%;
+  }
+
+  .stickyContainer {
+    position: static;
+    padding-top: 0px;
+    width: 100%;
+  }
+}
