--- a/src/pages/Hero/Hero.module.css
+++ b/src/pages/Hero/Hero.module.css
@@ -20,7 +20,7 @@
   overflow: hidden; /* Ensures the content is not revealed until the animation */
   border-right: 0.15em solid var(--text-color); /* The typwriter cursor */
   white-space: nowrap; /* Keeps the content on a single line */
-  width: 100%;
+  width: 96%;
   margin: 1px auto; /* Gives that scrolling effect as the typing happens */
   animation: typing 3s, cursor 0.4s step-end infinite alternate;
 }
@@ -49,5 +49,24 @@
   100% {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+
+@media (max-width: 425px) {
+  .typing1 {
+    font-size: 16px;
+    width: 90% !important;
+  }
+}
+
+@media (max-width: 375px) {
+  .typing1 {
+    width: 100% !important;
+  }
+}
+
+@media (max-width: 768px) {
+  .typing1 {
+    width: 100% !important;
   }
 }
