--- a/src/pages/Hero/Hero.module.css
+++ b/src/pages/Hero/Hero.module.css
@@ -52,7 +52,13 @@
   }
 }
 
-@media (max-width: 425px) {
+@media (max-width: 768px) {
+  .typing1 {
+    width: 100% !important;
+  }
+}
+
+@media (min-width: 376px) and (max-width: 425px) {
   .typing1 {
     font-size: 16px;
     width: 90% !important;
@@ -61,12 +67,7 @@
 
 @media (max-width: 375px) {
   .typing1 {
-    width: 100% !important;
-  }
-}
-
-@media (max-width: 768px) {
-  .typing1 {
+    font-size: 16px;
     width: 100% !important;
   }
 }
