--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 
 :root {
   --primary-color: #ffc107;
+  --secondary-color: #3f3716;
   --font: PlusJakartaSans;
   --bg-color: #242527;
   --text-color: #ffffff;
